--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "private": true,
     "license": "MIT",
     "author": "Hin",
+    "main": "electron/main.js",
     "scripts": {
         "dev": "next dev --turbopack",
         "build": "next build",
@@ -13,7 +14,10 @@
         "format": "prettier --write .",
         "format:check": "prettier --check .",
         "lint-staged": "lint-staged",
-        "prepare": "husky"
+        "prepare": "husky",
+        "electron-dev": "concurrently \"npm run dev\" \"electron .\"",
+        "export": "next build && next export -o out",
+        "electron-pack": "npm run export && electron-builder"
     },
     "dependencies": {
         "@radix-ui/react-slot": "^1.1.0",
@@ -45,10 +49,29 @@
         "postcss": "8.4.30",
         "prettier": "^3.4.1",
         "tailwindcss": "^3.4.15",
-        "typescript": "5.2.2"
+        "typescript": "5.2.2",
+        "concurrently": "^8.2.2"
     },
     "overrides": {
         "@types/react": "npm:types-react@19.0.0-rc.1",
         "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+    },
+    "build": {
+        "appId": "com.yourcompany.screensharing",
+        "productName": "Screen Sharing App",
+        "files": [
+            "electron/**/*",
+            "out/**/*",
+            "package.json"
+        ],
+        "win": {
+            "target": "nsis"
+        },
+        "mac": {
+            "target": "dmg"
+        },
+        "linux": {
+            "target": "AppImage"
+        }
     }
 }
